# altk-evolve

./: .env.example  .gitignore  .pre-commit-config.yaml  .roomodes  .secrets.baseline  404.html  AGENTS.md  CHANGELOG.md  CLAUDE_CODE_DEMO.md  CONFIGURATION.md  CONTRIBUTING.md  DEMO.md  Dockerfile.core  EVOLVE_LITE.md  KAIZEN_LITE.md  MANIFEST.in  README.md  README_DEMO_SCRIPTS.md  README_phoenix_sync.md  SAVE_SKILL_DESIGN.md  extract_trajectories.py  index.html  justfile  mkdocs.yaml  pyproject.toml  retention.example.yaml  run_openai_agents_demo_with_tips.sh  sitemap.xml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: check-code.yaml  docker-publish.yml  python-publish.yml  release-github.yaml
altk_evolve/backend/: _dual_write.py  _md_serialization.py  base.py  filesystem.py  markdown.py  milvus.py  postgres.py
altk_evolve/cli/: cli.py
altk_evolve/config/: evolve.py  guidelines.py  hooks.py  llm.py  markdown.py  pii.py
altk_evolve/hooks/: __init__.py  manager.py  plugin.py  types.py
altk_evolve/pii/: __init__.py  redaction.py
altk_evolve/retention/: __init__.py  engine.py  policy.py
altk_evolve/schema/: core.py  guidelines.py  outcome_evidence.py  tips.py
altk_evolve/sync/: phoenix_sync.py
altk_evolve/telemetry/: __init__.py  decorators.py  durable_metrics.py  outcome_aggregation_job.py  retrieval_log.py
altk_evolve/viz/: data.py  server.py
archive/save-session-as-skill-design/: index.html
demo/filesystem/: server.py
design_doc/: implementation_plan.md  markdown_schema.md  transform_evolve.md
docs/: LOW_CODE_TRACING.md  POLICIES.md  consistency_guidelines_integration.md  index.md
docs/adr/: 0001-compile-time-plugin-generation.md
docs/archive/: save-session-as-skill-design.md
docs/components/: github-repo-card.js
docs/guides/: backend-configuration.md  configuration.md  low-code-tracing.md  memory-hooks.md  phoenix-sync.md  pii-redaction.md  retention.md  viz.md
docs/installation/: index.md
docs/integrations/: evolve-lite-codex.md  evolve-lite.md
docs/reference/: cli.md
docs/results/: index.md
evolve/auto/: __init__.py
evolve/backend/: base.py  filesystem.py  milvus.py  postgres.py
evolve/cli/: cli.py
evolve/db/: sqlite_manager.py
evolve/llm/: __init__.py
evolve/schema/: conflict_resolution.py
evolve/sync/: __init__.py  phoenix_sync.py
examples/: hooks_demo.py  hooks_plugins.yaml  pii_benchmark.py  pii_redaction_demo.py  retention.example.yaml  retention_demo.py
examples/hello_world/: index.html
examples/low_code/: litellm_demo.py  manual_phoenix_demo.py  openai_agents_demo.py  simple_openai.py  smolagents_demo.py
experiments/: README.md  skill_from_trajectory.py  token_savings.py
explorations/agent-wiki/: README.md  REVIEW-FINDINGS.md
explorations/claudecode/: pyproject.toml
guides/configuration/: index.html
guides/extract-trajectories/: index.html
guides/low-code-tracing/: index.html
guides/phoenix-sync/: index.html
installation/: index.html
integrations/evolve-lite/: index.html
kaizen/auto/: __init__.py
kaizen/backend/: base.py  filesystem.py  milvus.py  postgres.py
kaizen/cli/: cli.py
kaizen/config/: kaizen.py  llm.py  postgres.py
kaizen/db/: sqlite_manager.py
kaizen/schema/: core.py  policy.py  tips.py
kaizen/sync/: phoenix_sync.py
kaizen/utils/: utils.py
operations/docker-testing/: index.html
overrides/: main.html
platform-integrations/: INSTALL_SPEC.md  install.sh
platform-integrations/claude/: marketplace.json
plugin-source/: EVOLVE.md.j2  MANIFEST.toml  README.md  _macros.j2  build_plugins.py  plugin.toml
plugin-source/_bob/: custom_modes.yaml
plugin-source/commands/: evolve-lite-publish.md  evolve-lite-recall.md  evolve-lite-subscribe.md  evolve-lite-sync.md
plugin-source/lib/: config.py  pii.py  retention.py
plugins/kaizen/: INSTALL.md  README.md
reference/cli/: index.html
reference/policies/: index.html
results/: index.html
roo-skill/: .roomodes
sandbox/: Dockerfile  README.md  sample.env
sandbox/codex/: bootstrap_codex_config.py  entrypoint.sh
scripts/: build_plugins.py  extract_trajectories.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  smoke_skills.py
tests/e2e/: conftest.py  test_bob_sandbox_learn_recall.py  test_claude_sandbox_learn_recall.py  test_codex_sandbox_learn_recall.py  test_e2e_consistency_pipeline.py  test_e2e_mcp_consistency.py  test_e2e_pipeline.py  test_e2e_segmentation.py  test_e2e_smolagent_mcp.py  test_mcp.py  test_sandbox_learn_recall.py  test_sharing.py
tests/llm/: test_conflict_resolution.py  test_long_conflict_resolution.py
tests/platform_integrations/: AGENTS.md  conftest.py  test_audit.py  test_audit_recall.py  test_bob_allowlist.py  test_bob_sharing.py  test_build_pipeline.py  test_claude.py  test_claude_retrieve_manifest.py  test_codex.py  test_codex_retrieve_manifest.py  test_codex_sharing.py  test_config.py  test_doctor.py  test_dry_run.py  test_end_to_end_claude.py  test_entity_io.py  test_entity_io_core.py  test_idempotency.py  test_legacy_migration.py  test_log_influence.py  test_marker_line.py  test_pii.py  test_plugin_structure.py  test_preservation.py  test_provenance.py  test_publish.py  test_retention_plugin.py  test_retrieve.py  test_save_entities.py  test_skill_directory_names.py  test_stop_hooks_path_resolution.py  test_subscribe.py  test_sync.py
tests/unit/: _ext_native_plugin.py  test_cli.py  test_cli_dual_write_verify.py  test_client.py  test_clustering.py  test_combine_guidelines.py  test_combine_tips.py  test_conflict_resolution.py  test_consistency_analyzer.py  test_consistency_guidelines.py  test_dual_write.py  test_durable_metrics.py  test_entity_sharing.py  test_entity_sharing_e2e.py  test_evolve_client_markdown.py  test_filesystem_backend.py  test_guideline_resolver.py  test_guidelines.py  test_hooks_config_discovery.py  test_hooks_native_third_party.py  test_hooks_noop.py  test_hooks_plugin_cores.py  test_hooks_plugins.py  test_hooks_seam.py  test_llm_config.py  test_markdown_backend.py  (+23 more)
tutorials/: index.html
(+544 files in other folders)
