[project]
name = "altk-evolve"
version = "1.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=12.30.0",
    "fastmcp",
    "jinja2",
    "litellm>=1.84.0",
    "pydantic",
    "pyyaml",
    "sentence-transformers",
    "typer>=0.9.0",
    "uvicorn",
]

[project.optional-dependencies]
build = ["uv"]

# PII redaction backend (issue #275). CPEX's regex detector lives in a separate
# prebuilt wheel; keep it optional so installs without redaction stay lean.
pii = ["cpex-pii-filter>=0.3.5"]

# Semantic PII backend: IBM READI (transformer NER). Heavy (torch/spaCy/flair);
# powers pii.mode = "semantic". The en_core_web_trf model downloads on first use;
# spacy-curated-transformers provides the curated_transformer factory it needs.
readi = ["readi-privacy>=0.1.6", "spacy-curated-transformers"]

# Benchmarking against external labeled corpora (examples/pii_benchmark.py --dataset).
bench = ["datasets>=2.14"]

tracing = [
    "openinference-instrumentation-openai",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-smolagents",
    "openinference-instrumentation-openai-agents",
]

milvus = [
    "pymilvus[milvus-lite]>=2.6.2; platform_machine != 'aarch64'",
    "pymilvus>=2.6.2; platform_machine == 'aarch64'",
    "milvus-lite>=2.5.1; platform_machine != 'aarch64'",
]

pgvector = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]

examples = [
    "altk-evolve[tracing]",
    "smolagents",
    "openai-agents",
    "openai",
]

[project.scripts]
evolve = "altk_evolve.cli.cli:app"
evolve-mcp = "altk_evolve.frontend.mcp.__main__:main"





[dependency-groups]
dev = [
    "anyio",
    "detect-secrets",
    "mypy",
    "pgvector>=0.3",
    "pre-commit",
    "psycopg[binary]>=3.1",
    "pytest",
    "pytest-cov",
    "pytest-retry",
    "python-dotenv>=1.2.1",
    "python-semantic-release",
    "ruff",
    "types-requests>=2.32.4.20260107",
    "types-PyYAML",
]

docs = [
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocs-click",
    "mkdocstrings[python]",
    "griffe_inherited_docstrings",
    "griffe-pydantic",
    "mkdocs-awesome-nav",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-enumerate-headings-plugin"
]

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets", branch="master"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["explorations*"]
include = ["altk_evolve*"]

[tool.setuptools.package-data]
altk_evolve = ["**/*.jinja2"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--ignore=explorations -m 'not llm and not e2e'"
markers = [
    "e2e",
    "unit",
    "llm",
    "platform_integrations"
]
anyio_mode = "auto"

[tool.ruff]
line-length = 140
indent-width = 4
# Generated example-wiki content (scripts the wiki builder emitted verbatim from
# trajectories) is exploration artifact, not project source — don't lint it.
extend-exclude = ["explorations/agent-wiki/wikis/"]

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
version_variables = ["altk_evolve/__init__.py:__version__"]
commit_parser = "conventional"
build_command = '''
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    cp README.md README.md.bak
    perl -i -pe "s|src=\"docs/|src=\"https://raw.githubusercontent.com/AgentToolkit/altk-evolve/v$NEW_VERSION/docs/|g" README.md
    perl -i -pe "s|\]\(([A-Z_]*\.md)\)|](https://github.com/AgentToolkit/altk-evolve/blob/v$NEW_VERSION/\$1)|g" README.md
    perl -i -pe "s|\]\(docs/([^)]*)\)|](https://github.com/AgentToolkit/altk-evolve/blob/v$NEW_VERSION/docs/\$1)|g" README.md
    sed -i 's/^SCRIPT_VERSION="main"/SCRIPT_VERSION="v'"$NEW_VERSION"'"/' platform-integrations/install.sh
    uv build
    git checkout platform-integrations/install.sh
    mv README.md.bak README.md
'''
tag_format = "v{version}"
commit_message = "chore: bump version to {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
exclude = [
    "build/",
    "platform-integrations/",
    "plugin-source/",
    "examples/",
    "explorations/agent-wiki/wikis/",
]

[[tool.mypy.overrides]]
module = [
    "pymilvus.*",
    "smolagents.*",
    "milvus_lite.*",
    "openinference.*",
    "agents.*",
    "pgvector.*",
    "psycopg.*",
    "entity_io.*",
    "local_mcp_server",
    "config",
    "audit",
    "pii",
    "retention",
    "cpex_pii_filter.*",
    "datasets.*",
    "risk_assessment.*",
]
ignore_missing_imports = true
