[project]
name = "altk-evolve"
version = "1.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=12.30.0",
    "fastmcp",
    "jinja2",
    "litellm>=1.84.0",
    "numpy",
    "pandas",
    "pydantic",
    "pyyaml",
    "scipy",
    "sentence-transformers",
    "typer>=0.9.0",
    "uvicorn",
]

[project.optional-dependencies]
build = ["uv"]

tracing = [
    "openinference-instrumentation-openai",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-smolagents",
    "openinference-instrumentation-openai-agents",
]

milvus = [
    "pymilvus[milvus-lite]>=2.6.2; platform_machine != 'aarch64'",
    "pymilvus>=2.6.2; platform_machine == 'aarch64'",
    "milvus-lite>=2.5.1; platform_machine != 'aarch64'",
]

pgvector = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]

# Optional plugin/hook framework (CPEX). Kept out of core deps because cpex
# pulls heavy transitive dependencies (fastapi, mcp, prometheus). Without this
# extra installed, the hook seam is a fast no-op.
hooks = [
    "cpex>=0.1.0,<0.2",
]

# PII redaction is offered as two *methods*, each its own extra: regex (this
# one, lightweight/deterministic) and semantic (NER, below). Both are PII
# redaction; the name says the method, not "PII vs not-PII". Running BOTH is the
# recommended defence-in-depth default — regex for structured identifiers,
# semantic for names/entities.
#
# `[pii-regex]`: the regex method (cpex-pii-filter's Rust engine). Separate from
# [hooks] so users who only want normalization/audit plugins don't pull the PII
# filter.
pii-regex = [
    "altk-evolve[hooks]",
    # Upper-bound the minor (mirrors cpex's <0.2): PIIFilterMemoryPlugin always
    # receives a PluginConfig on the YAML/spec path (the `config or
    # _default_config()` fallback is unreachable there — a PluginConfig is
    # always truthy), so a defaults change in a 0.4 release would silently alter
    # what gets redacted rather than surface as an error. Pin the minor and bump
    # deliberately.
    "cpex-pii-filter>=0.3,<0.4",
]

# Backward-compatible alias. `[pii]` historically meant the regex method, so it
# maps to `[pii-regex]` and keeps existing `altk-evolve[pii]` installs working
# with the same lightweight, deterministic behaviour. It deliberately does NOT
# pull the heavy semantic deps — that would turn a previously ~small install
# into a multi-hundred-MB spaCy/transformers download for existing users. For
# semantic redaction, install `[pii-semantic]` explicitly.
pii = [
    "altk-evolve[pii-regex]",
]

# `[pii-semantic]`: the semantic (NER) method, backed by IBM READI
# (``readi-privacy``, import name ``risk_assessment``). The more powerful method
# — it catches names/locations/organizations regex cannot — but it drags in
# spaCy/transformers and downloads model weights, so it is a separate extra from
# `[pii-regex]`, which stays dependency-light for deployments that only need it.
pii-semantic = [
    "altk-evolve[hooks]",
    # Upper-bound the minor, mirroring [hooks]/[pii-regex]: READI's extractor and
    # DetectionType APIs (READIAnalyzer, SpacyEntityExtractor, ...) are what
    # this plugin's core is written against, and a 0.2 release could reshape
    # them silently rather than surface as an error.
    "readi-privacy>=0.1.6,<0.2",
    # READI's default English pipeline is the curated-transformer spaCy model
    # en_core_web_trf, whose factories live in this package; without it the
    # model loads with a bare "can't find factory" error.
    "spacy-curated-transformers>=0.2,<3",
]

# Benchmarking the redactors against external labeled corpora
# (examples/pii_benchmark.py --dataset). Not needed at runtime.
bench = [
    "datasets>=2.14",
]

examples = [
    "altk-evolve[tracing]",
    "smolagents",
    "openai-agents",
    "openai",
]

[project.scripts]
evolve = "altk_evolve.cli.cli:app"
evolve-mcp = "altk_evolve.frontend.mcp.__main__:main"





[dependency-groups]
dev = [
    "anyio",
    "detect-secrets",
    "mypy",
    "pgvector>=0.3",
    "pre-commit",
    "psycopg[binary]>=3.1",
    "pytest",
    "pytest-cov",
    "pytest-retry",
    "python-dotenv>=1.2.1",
    "python-semantic-release",
    "ruff",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.32.4.20260107",
]

docs = [
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocs-click",
    "mkdocstrings[python]",
    "griffe_inherited_docstrings",
    "griffe-pydantic",
    "mkdocs-awesome-nav",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-enumerate-headings-plugin"
]

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets", branch="master"}


[tool.setuptools.packages.find]
where = ["."]
exclude = ["explorations*"]
include = ["altk_evolve*"]

[tool.setuptools.package-data]
altk_evolve = ["**/*.jinja2", "**/*.yaml"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--ignore=explorations -m 'not llm and not e2e'"
markers = [
    "e2e",
    "unit",
    "llm",
    "platform_integrations"
]
anyio_mode = "auto"

[tool.ruff]
line-length = 140
indent-width = 4
# Generated example-wiki content (scripts the wiki builder emitted verbatim from
# trajectories) is exploration artifact, not project source — don't lint it.
extend-exclude = ["explorations/agent-wiki/wikis/"]

[tool.ruff.lint.per-file-ignores]
# Vendored consistency_analyzer modules: E402 because the vendored files place
# logger = logging.getLogger(__name__) between standard-library and project imports,
# a structural pattern we are not refactoring in this PR.
"altk_evolve/llm/guidelines/consistency_analyzer/*.py" = ["E402"]


[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
version_variables = ["altk_evolve/__init__.py:__version__"]
commit_parser = "conventional"
build_command = '''
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    cp README.md README.md.bak
    perl -i -pe "s|src=\"docs/|src=\"https://raw.githubusercontent.com/AgentToolkit/altk-evolve/v$NEW_VERSION/docs/|g" README.md
    perl -i -pe "s|\]\(([A-Z_]*\.md)\)|](https://github.com/AgentToolkit/altk-evolve/blob/v$NEW_VERSION/\$1)|g" README.md
    perl -i -pe "s|\]\(docs/([^)]*)\)|](https://github.com/AgentToolkit/altk-evolve/blob/v$NEW_VERSION/docs/\$1)|g" README.md
    sed -i 's/^SCRIPT_VERSION="main"/SCRIPT_VERSION="v'"$NEW_VERSION"'"/' platform-integrations/install.sh
    uv build
    git checkout platform-integrations/install.sh
    mv README.md.bak README.md
'''
tag_format = "v{version}"
commit_message = "chore: bump version to {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
exclude = [
    "build/",
    "platform-integrations/",
    "plugin-source/",
    "examples/",
    "explorations/agent-wiki/wikis/",
]

[[tool.mypy.overrides]]
module = [
    "cpex.*",
    "cpex_pii_filter.*",
    # IBM READI ships no py.typed marker; Presidio is an optional transitive of it.
    "risk_assessment.*",
    "presidio_analyzer.*",
    "pymilvus.*",
    "smolagents.*",
    "milvus_lite.*",
    "openinference.*",
    "agents.*",
    "pgvector.*",
    "psycopg.*",
    "entity_io.*",
    "local_mcp_server",
    "config",
    "audit",
    "retention",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Vendored consistency_analyzer modules: structural type errors in the original code
# (dynamic dict/str patterns, missing annotations) that we are not refactoring in this PR.
module = "altk_evolve.llm.guidelines.consistency_analyzer.*"
ignore_errors = true
